--- a/app/src/main/res/layout/filterview_item.xml
+++ b/app/src/main/res/layout/filterview_item.xml
@@ -18,9 +18,9 @@ limitations under the License. -->
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:paddingStart="4dp"
-    android:paddingEnd="4dp"
+    android:layout_margin="8dp"
+    android:padding="8dp"
+    android:background="@drawable/news_item_bg"
     >
 
   <TextView
