--- a/app/src/main/res/layout/dialog_add_filter.xml
+++ b/app/src/main/res/layout/dialog_add_filter.xml
@@ -54,6 +54,16 @@
           />
 
       <TextView
+          android:id="@+id/textViewFilterDesc"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/textViewFilterSpinner"
+          style="@style/section_header"
+          />
+
+      <TextView
           android:id="@+id/textViewFilterDoubleType"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
@@ -71,7 +81,7 @@
           android:layout_margin="8dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/guideline1"
-          app:layout_constraintTop_toBottomOf="@id/textViewFilterSpinner"
+          app:layout_constraintTop_toBottomOf="@id/textViewFilterDesc"
           >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/filterDoubleValue"
