--- a/app/src/main/res/layout/dialog_add_filter.xml
+++ b/app/src/main/res/layout/dialog_add_filter.xml
@@ -57,10 +57,11 @@
           android:id="@+id/textViewFilterDesc"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:textSize="12sp"
+          android:layout_marginTop="16dp"
+          app:layout_constraintTop_toBottomOf="@+id/textViewFilterSpinner"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/textViewFilterSpinner"
-          style="@style/section_header"
           />
 
       <TextView
