--- a/app/src/main/res/layout/filterview_item.xml
+++ b/app/src/main/res/layout/filterview_item.xml
@@ -37,7 +37,7 @@ limitations under the License. -->
         android:id="@+id/filterText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textAppearance="@android:style/TextAppearance.Medium"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
