--- a/app/src/main/res/layout/dialog_add_filter.xml
+++ b/app/src/main/res/layout/dialog_add_filter.xml
@@ -66,6 +66,7 @@
 
       <TextView
           android:id="@+id/textViewFilterDoubleType"
+          android:visibility="gone"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/filter_value_double"
@@ -77,6 +78,7 @@
           />
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayoutFilterDoubleType"
+          android:visibility="gone"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_margin="8dp"
@@ -101,6 +103,7 @@
 
       <TextView
           android:id="@+id/textViewFilterIntType"
+          android:visibility="gone"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/filter_value_double"
@@ -112,6 +115,7 @@
           />
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayoutFilterIntType"
+          android:visibility="gone"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_margin="8dp"
@@ -136,6 +140,7 @@
 
       <TextView
           android:id="@+id/textViewFilterTextType"
+          android:visibility="gone"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/filter_value_text"
@@ -147,6 +152,7 @@
           />
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayoutFilterTextType"
+          android:visibility="gone"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_margin="8dp"
@@ -168,6 +174,7 @@
 
       <com.thecloudsite.stockroom.CustomDatePicker
           android:id="@+id/datePickerFilter"
+          android:visibility="gone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
