--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -36,6 +36,17 @@
 
   <View style="@style/Divider"/>
 
+  <TextView
+      android:id="@+id/textViewFilterSelection"
+      android:layout_width="match_parent"
+      android:layout_height="40dp"
+      android:layout_margin="16dp"
+      android:textSize="16sp"
+      android:textColor="@color/buttonLabel"
+      android:background="@drawable/portfolio_item_bg"
+      android:gravity="center_horizontal|center_vertical"
+      />
+
   <ImageButton
       android:id="@+id/addFilterButton"
       android:src="@drawable/ic_action_add_circle_outline"
