--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -39,8 +39,9 @@
   <TextView
       android:id="@+id/textViewFilterSelection"
       android:layout_width="match_parent"
-      android:layout_height="40dp"
+      android:layout_height="wrap_content"
       android:layout_margin="16dp"
+      android:padding="8dp"
       android:textSize="16sp"
       android:textColor="@color/buttonLabel"
       android:background="@drawable/portfolio_item_bg"
