--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,6 +9,7 @@
       app:showAsAction="always" />
 
   <item
+      android:id="@+id/menu_sort"
       android:icon="@drawable/ic_action_sort"
       android:title="@string/menu_sort"
       app:showAsAction="always">
