add filter sub type

--- a/app/src/main/res/layout/dialog_add_filter.xml
+++ b/app/src/main/res/layout/dialog_add_filter.xml
@@ -64,9 +64,19 @@
           app:layout_constraintStart_toStartOf="parent"
           />
 
+      <Spinner
+          android:id="@+id/textViewSubTypeSpinner"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/textViewFilterDesc"
+          />
+
       <TextView
           android:id="@+id/textViewFilterDoubleType"
-          android:visibility="gone"
+          android:visibility="visible"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/filter_value_double"
@@ -78,13 +88,13 @@
           />
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayoutFilterDoubleType"
-          android:visibility="gone"
+          android:visibility="visible"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_margin="8dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/guideline1"
-          app:layout_constraintTop_toBottomOf="@id/textViewFilterDesc"
+          app:layout_constraintTop_toBottomOf="@id/textViewSubTypeSpinner"
           >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/filterDoubleValue"
@@ -103,7 +113,7 @@
 
       <TextView
           android:id="@+id/textViewFilterIntType"
-          android:visibility="gone"
+          android:visibility="visible"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/filter_value_double"
@@ -115,7 +125,7 @@
           />
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayoutFilterIntType"
-          android:visibility="gone"
+          android:visibility="visible"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_margin="8dp"
@@ -140,7 +150,7 @@
 
       <TextView
           android:id="@+id/textViewFilterTextType"
-          android:visibility="gone"
+          android:visibility="visible"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/filter_value_text"
@@ -152,7 +162,7 @@
           />
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayoutFilterTextType"
-          android:visibility="gone"
+          android:visibility="visible"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_margin="8dp"
@@ -174,7 +184,7 @@
 
       <com.thecloudsite.stockroom.CustomDatePicker
           android:id="@+id/datePickerFilter"
-          android:visibility="gone"
+          android:visibility="visible"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
