--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -45,4 +45,10 @@
     <item>02_StockRoomTileFragment</item>
     <item>06_SummaryGroupFragment</item>
   </string-array>
+  <string-array name="displayed_views_entries_defaults">
+    <item>00_StockRoomChartFragment</item>
+    <item>01_StockRoomListFragment</item>
+    <item>02_StockRoomTileFragment</item>
+    <item>06_SummaryGroupFragment</item>
+  </string-array>
 </resources>
