--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -48,6 +48,15 @@
       android:gravity="center_horizontal|center_vertical"
       />
 
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginEnd="16dp"
+      android:text="@string/filter_mode"
+      />
+
   <Spinner
       android:id="@+id/textViewFilterModeSpinner"
       android:layout_width="wrap_content"
