--- a/app/src/main/res/layout/dialog_add_filter.xml
+++ b/app/src/main/res/layout/dialog_add_filter.xml
@@ -55,7 +55,6 @@
 
       <TextView
           android:id="@+id/textViewFilterDesc"
-          android:visibility="visible"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="12sp"
@@ -185,6 +184,30 @@
             />
       </com.google.android.material.textfield.TextInputLayout>
 
+      <TextView
+          android:id="@+id/textViewFilterGroupType"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:text="@string/filter_value_group"
+          android:visibility="gone"
+          app:layout_constraintBottom_toBottomOf="@+id/groupSpinnerFilter"
+          app:layout_constraintEnd_toStartOf="@+id/guideline1"
+          app:layout_constraintHorizontal_bias="0.0"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="@+id/groupSpinnerFilter"
+          app:layout_constraintVertical_bias="1.0"
+          />
+      <Spinner
+          android:id="@+id/groupSpinnerFilter"
+          android:visibility="gone"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/guideline1"
+          app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFilterTextType"
+          />
+
       <com.thecloudsite.stockroom.CustomDatePicker
           android:id="@+id/datePickerFilter"
           android:visibility="gone"
@@ -192,7 +215,7 @@
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:datePickerMode="calendar"
-          app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFilterTextType"
+          app:layout_constraintTop_toBottomOf="@+id/groupSpinnerFilter"
           />
 
       <androidx.constraintlayout.widget.Guideline
